<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, HelloActivity!</string>
    <string name="app_name">Hello</string>
    <string name="ClickMe">ClickMe</string>
    <string name="Start">Start</string>
    <string name="Stop">Stop</string>
    <string name="Bind">Bind</string>
    <string name="Unbind">Unbind</string>
    <string name="GetCount">GetCount</string>
</resources>
