<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:id="@+id/show"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/hello"
    />
<Button android:text="@string/ClickMe" android:id="@+id/button1" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
<Button android:text="@string/Start" android:id="@+id/start" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
<Button android:text="@string/Stop" android:id="@+id/stop" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
<Button android:text="@string/Bind" android:id="@+id/bind" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
<Button android:text="@string/Unbind" android:id="@+id/unbind" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
<Button android:text="@string/GetCount" android:id="@+id/getCount" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
</LinearLayout>
